iptables.after-ssh.conf
# Generated by iptables-save v1.6.1 on Mon Mar 30 16:20:49 2020
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [40:2880]
-A INPUT -s 192.168.100.3/32 -d 192.168.100.2/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 192.168.100.0/24 -d 192.168.200.0/24 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -s 192.168.200.0/24 -d 192.168.100.0/24 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A FORWARD -s 192.168.200.0/24 -d 192.168.100.0/24 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -s 192.168.100.0/24 -d 192.168.200.0/24 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A FORWARD -s 192.168.100.0/24 -o eth0 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -d 192.168.100.0/24 -i eth0 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A FORWARD -s 192.168.100.0/24 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -s 192.168.100.0/24 -o eth0 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -s 192.168.100.0/24 -o eth0 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -s 192.168.100.0/24 -o eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -s 192.168.100.0/24 -o eth0 -p tcp -m tcp --dport 8080 -j ACCEPT
-A FORWARD -s 192.168.100.0/24 -o eth0 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -s 192.168.100.3/32 -d 192.168.200.3/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -s 192.168.100.2/32 -d 192.168.100.3/32 -p tcp -m tcp --sport 22 -j ACCEPT
COMMIT
# Completed on Mon Mar 30 16:20:49 2020
# Generated by iptables-save v1.6.1 on Mon Mar 30 16:20:49 2020
*nat
:PREROUTING ACCEPT [206:28119]
:INPUT ACCEPT [19:1356]
:OUTPUT ACCEPT [28:2017]
:POSTROUTING ACCEPT [58:8737]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
-A OUTPUT -d 127.0.0.11/32 -j DOCKER_OUTPUT
-A POSTROUTING -d 127.0.0.11/32 -j DOCKER_POSTROUTING
-A POSTROUTING -o eth0 -j MASQUERADE
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p tcp -m tcp --dport 53 -j DNAT [unsupported revision]
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p udp -m udp --dport 53 -j DNAT [unsupported revision]
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 46863 -j SNAT --to-source :53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 33828 -j SNAT --to-source :53
COMMIT
# Completed on Mon Mar 30 16:20:49 2020
